fix gap for icon

--- a/stories/button/button.sass
+++ b/stories/button/button.sass
@@ -12,10 +12,7 @@
         font-family: sans-serif /*todo Roboto*/
 
         &-icon
-            width: 24px
-            height: 24px
             display: block
-            margin-right: base(2)
             stroke: var(--color-base-white)
 
         &-paragraph
@@ -64,12 +61,26 @@
         &--small
             padding: base(1) base(4)
             font-size: 13px
+
+            & .ds--button-icon
+                margin-right: base(1)
+                width: 15px
+                height: 15px
         &--medium
             padding: base(2) base(5)
             font-size: 14px
+
+            & .ds--button-icon
+                margin-right: base(2)
+                width: 20px
+                height: 20px
         &--big
             padding: base(3) base(6)
             font-size: 16px
+
+            & .ds--button-icon
+                width: 24px
+                height: 24px
 
 
 
